@@ -6,6 +6,7 @@ import collections
 import json
 import unittest
 import warnings
+from datetime import date, datetime
 from decimal import Decimal
 
 # non-standard import name for ugettext_lazy, to prevent strings from being picked up for translation
@@ -2436,6 +2437,55 @@ class TestStaticBlock(unittest.TestCase):
         block = blocks.StaticBlock()
         result = block.to_python(None)
         self.assertEqual(result, None)
+
+
+class TestDateBlock(TestCase):
+
+    def test_render_form(self):
+        block = blocks.DateBlock()
+        value = date(2015, 8, 13)
+        result = block.render_form(value, prefix='dateblock')
+
+        # we should see the JS initialiser code:
+        # <script>initDateChooser("dateblock", {"dayOfWeekStart": 0, "format": "Y-m-d"});</script>
+        # except that we can't predict the order of the config options
+        self.assertIn('<script>initDateChooser("dateblock", {', result)
+        self.assertIn('"dayOfWeekStart": 0', result)
+        self.assertIn('"format": "Y-m-d"', result)
+
+        self.assertInHTML(
+            '<input id="dateblock" name="dateblock" placeholder="" type="text" value="2015-08-13" />',
+            result
+        )
+
+    def test_render_form_with_format(self):
+        block = blocks.DateBlock(format='%d.%m.%Y')
+        value = date(2015, 8, 13)
+        result = block.render_form(value, prefix='dateblock')
+
+        self.assertIn('<script>initDateChooser("dateblock", {', result)
+        self.assertIn('"dayOfWeekStart": 0', result)
+        self.assertIn('"format": "d.m.Y"', result)
+        self.assertInHTML(
+            '<input id="dateblock" name="dateblock" placeholder="" type="text" value="13.08.2015" />',
+            result
+        )
+
+
+class TestDateTimeBlock(TestCase):
+
+    def test_render_form_with_format(self):
+        block = blocks.DateTimeBlock(format='%d.%m.%Y %H:%M')
+        value = datetime(2015, 8, 13, 10, 0)
+        result = block.render_form(value, prefix='datetimeblock')
+        self.assertIn(
+            '"format": "d.m.Y H:i"',
+            result
+        )
+        self.assertInHTML(
+            '<input id="datetimeblock" name="datetimeblock" placeholder="" type="text" value="13.08.2015 10:00" />',
+            result
+        )
 
 
 class TestSystemCheck(TestCase):
